fix sidebar close button visibility

--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -143,7 +143,7 @@ header {
             position: absolute;
             inset: 0.5rem 0.5rem auto auto;
 
-            @media (min-width: 1200px) {
+            @media (min-width: 768px) {
                 display: none;
             }
         }
@@ -237,7 +237,6 @@ main {
     background-color: #fff;
     container-name: content;
     container-type: inline-size;
-    overflow-y: auto;
     height: calc(100vh - var(--header-height-long));
     
     @media (min-width: 768px) {
@@ -247,8 +246,10 @@ main {
 
 .easyquery-container {
     height: 100%;
+    padding: 5px;
     display: grid;
     gap: var(--grid-padding);
+    /*overflow-y: auto;*/
     
     & > div {
         padding: 0 6px;
